fixtures/negative/invalid_sa_edit_distance.sam
@SQ	SN:MT	LN:16569
bad-sa-nm	0	MT	100	60	10M10S	*	0	0	AAAAAAAAAAAAAAAAAAAA	IIIIIIIIIIIIIIIIIIII	SA:Z:MT,300,+,10S10M,60,not-a-number;
